# sortwiz

./: LICENSE  README.md  pyproject.toml
src/sortwiz/: __init__.py  __main__.py  base_sort.py  bubble_sort.py  errors.py  heapsort.py  quicksort.py  sorting.py
test/: test_base_sort.py  test_bubble_sort.py  test_quicksort.py
