# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sortwiz"
version = "0.1.2"
description = "Apply sorting algorithms to python lists."
readme = "README.md"
authors = [{ name = "Roberto Betini Junior", email = "betini.roberto@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sort", "order", "sorting", "list"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/robertobetini/sortwiz"

[project.scripts]
sortwiz = "sortwiz.__main__:main"